syntax = "proto3";

package org.hse.nnbuilder.services;


service ListService {
  rpc listQuery (listQueryRequest) returns (listQueryResponse);
}

message listQueryRequest {
  //    <1: Byte>
}

message listQueryResponse {
  //    <count: Int> (<id: Int> <name: String> <size: Long>)*,
  int32 count = 1; //количество файлов
  int32 id = 2;  //идентификатор файла
  string name = 3; //название файла
  int64  size = 4; //размер файла
}
