syntax = "proto3";

package org.hse.nnbuilder.services;


service UpdateService {
  rpc updateQuery (updateQueryRequest) returns (updateQueryResponse);
}

message updateQueryRequest {
    //    <4: Byte> <clientPort: Short> <count: Int> (<id: Int>)*,
    int32 clientPort = 1; //порт клиента,
    int32 count = 2; //количество раздаваемых файлов,
    int32 id = 3; //идентификатор файла
}

message updateQueryResponse {
    //    <status: Boolean>,
    bool status = 1; //True, если информация успешно обновлена
}
